# ChangeLog for dev-python/boostpythongenerator
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*boostpythongenerator-0.3.2_p20091124 (05 Dec 2009)

  05 Dec 2009; Dominik Kapusta <ayoy@gentoo.org>
  -boostpythongenerator-0.2.ebuild,
  +boostpythongenerator-0.3.2_p20091124.ebuild,
  +files/boostpythongenerator-0.3.2_p20091124.patch,
  -boostpythongenerator-0.3.2a_p1.ebuild:
  Version bump, remove old

*boostpythongenerator-9999 (08 Nov 2009)

  08 Nov 2009; Dominik Kapusta <ayoy@gentoo.org>
  +boostpythongenerator-9999.ebuild:
  Adding live ebuild, compatible with Qt 4.6

*boostpythongenerator-0.3.2a_p1 (07 Nov 2009)

  07 Nov 2009; Dominik Kapusta <ayoy@gentoo.org>
  boostpythongenerator-0.2.ebuild, +boostpythongenerator-0.3.2a_p1.ebuild:
  Version bump + fix libdir

  23 Aug 2009; Dror Levin <spatz@psybear.com>
  boostpythongenerator-0.2.ebuild:
  Added ~x86 for testing, minor cleanups.

*boostpythongenerator-0.2 (18 Aug 2009)

  18 Aug 2009; Dror Levin <spatz@psybear.com>
  +boostpythongenerator-0.2.ebuild, +metadata.xml:
  Initial commit.
