@@ -1,6 +1,6 @@
 AUX boostpythongenerator-0.3.2_p20091124.patch 4100 RMD160 90a8692a0a39fdcbee4354fb262fdd3cf2622042 SHA1 7074d896439f4933e8e9009980298e68037bedf9 SHA256 51ad4859e3cfb78e07f109bebfdee786e25bdab23ccde3cc3e65b2aca0e32040
 DIST boostpythongenerator-0.3.2.tar.bz2 31512 RMD160 4ddc38b44794a5e1e4d4043c70c520ecb2807510 SHA1 e0676e454e95ad015e4566e3882fc3ccdf138e40 SHA256 7274e1df67bcaa420a5e9c9df1fe3b5ced7fbe9cf02300333c83e21e97503f67
-EBUILD boostpythongenerator-0.3.2_p20091124.ebuild 618 RMD160 a0bf1ad6f04209ff2232535b8b3439c259e3357e SHA1 241dc05f6994adb33fc37fd86096f6812c4296f2 SHA256 acf3be0cedd6cde6c6057aa6e54bbd83085047049cb69a3a46b1d329f5ebe3d4
-EBUILD boostpythongenerator-9999.ebuild 509 RMD160 65f040830640441a74bbfd439451040b9a38cec6 SHA1 88428063df7937c981909f609beccc72054d5457 SHA256 a418444b7b8f34a90bad423a931ba9e4571db3e513a2f44934bb7940c15f901c
+EBUILD boostpythongenerator-0.3.2_p20091124.ebuild 709 RMD160 cc9521e5da1dbfcd64d40930c9f194e124792367 SHA1 bcf129d077e19dd91912e400da78eda4abfd826e SHA256 a90771876c66618c966e1cd7140ba3008a560e82644fd2417536f9c98c37cb45
+EBUILD boostpythongenerator-9999.ebuild 599 RMD160 5717eaa5bc0053d1542e2bb72e8b899a9f05e476 SHA1 7078d3ff8406dd776b71fbb04dead007c1edee95 SHA256 4c6b101aa2d5ff6c5ea4d8b81c70a69a23f0b014e373a7e542f9613ddbec8ed8
 MISC ChangeLog 1096 RMD160 db67c6e2667b75eac1f1f00425aea852e5858e87 SHA1 4f18bf8de762d15de8150468f9a585ab1fda67c4 SHA256 eb5cedea0213350117bf0d3c6943bcb84f5c5421153156d632ada598649416c5
 MISC metadata.xml 156 RMD160 2c307fe3d7f514f10f158344b51114121632f411 SHA1 1b61305bd125f03b40ed85c17989140608e1efee SHA256 2bc85ad7339ae0191c26e435f2da777058779a7ebf73d14658a6ea7bfcec01b2
