@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Dec 2009; Dominik Kapusta <ayoy@gentoo.org>
+  boostpythongenerator-0.3.2_p20091124.ebuild,
+  boostpythongenerator-9999.ebuild:
+  Added some docs to src_install
+
 *boostpythongenerator-0.3.2_p20091124 (05 Dec 2009)
 
   05 Dec 2009; Dominik Kapusta <ayoy@gentoo.org>
